<resources>
    <string name="app_name">ISM</string>
    <string name="logo">Logo</string>
    <string name="phone_number_hint">Enter the phone number</string>
    <string name="full_name_hint">Full name</string>
    <string name="group">Group</string>
    <string name="e_mail">E-mail</string>
    <string name="course">Course</string>
    <string name="password_hint">Enter password</string>
    <string name="reenter_password_hint">Repeat password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_contact">CONTACT</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_ism">ISM</string>
    <string name="title_about_us">ABOUT US</string>
    <string name="home">HOME</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internation">

      INTERNATIONAL UNIVERSITY OF KYRGYZSTAN (IUK) was created in 1993 by a special Decree of the President of the Kyrgyz Republic \u00E2\u0084\u0096 74 that gave the university the status of international higher education institution.\n\nThe International School of Medicine as a structural division of IUK was established in 2003. The main foundation for establishment of the school was a strategy of reforming Kyrgyz education system and increasing competitiveness of domestic universities, which resulted in the main emphasis of ISM administration and faculty being focused on the creation of a modern dynamic educational institution that can provide high quality training and has competitive potentials in the medical education market.\n\nCurrently, the International School of Medicine is a modern university with a comprehensive infrastructure, and experienced faculty members that are nationally and some of them worldwide recognized specialists in different areas of medicine, professional health organizations and agencies.\n\nFifteen years ago the first 13 students were enrolled, whereas at present about 3500 students study in the school. Most of our students are citizens of foreign countries: India, Pakistan, South Korea, USA, Great Britain, Russia, Ukraine, Afghanistan, Japan, Nepal, Bangladesh, Turkey and Syria. This is why the language of instruction is English.\n\nAs mentioned in rector\u00E2\u0080\u0099s welcome message: \u00E2\u0080\u009Cstrong intellectual potential, close cooperation with leading medical institutions, the use of modern technologies, and individual approach to each student, all these ensure high quality of training and future professional achievements of our graduates\u00E2\u0080\u009D.\n\nAlthough the key to academic success of any faculty members and students is a hard work the main pillars of school accomplishments are  three  basic principles Equity, Quality, and Transparency that were reflected in our school Mission and Vision and developed to the ISM integrity code.\n\nThe ISM is registered and cooperates (our partners) with many leading international institutions: The World Health Organization (WHO), An International Association for Medical Education (AMEE), the Foundation for the Development of Medical Education and Science (FAIMER), Institute for International Medical Education (IIME), the PhD Program in Biomedicine and Health in the EU (ORPHEUS), and participates in several international programs. To date, 14 research projects approved by the Academic Council are being implemented in the ISM. The projects of "Central Asian Network for Education, Research and Innovation in Environmental and Occupational Health\u00E2\u0080\u009D and "Strengthening the Network of Education, Research and Innovation in Environmental Health in Asia\u00E2\u0080\u009D succeeded in getting selected by the Erasmus Plus Project.\n\nOur alumni have been successfully passing medical certification exams in their native countries along with countries such as USA, Great Britain etc. Our graduates do their continuous health studies as postgraduate trainees in leading institutions of North America and Europe and practicing medicine all over the world.
</string>
    <string name="action_search">Search</string>
</resources>
