<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_homehome_icon"
        android:enabled="true"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_about_us"
        android:icon="@drawable/ic_information_button"
        android:enabled="true"
        android:title="@string/title_about_us" />

    <item
        android:id="@+id/navigation_ism"
        android:icon="@drawable/ic_internet"
        android:enabled="true"
        android:title="@string/title_ism" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_call_answer"
        android:enabled="true"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

</menu>
