<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:scrollbars="none"
    tools:context=".ui.auth.RegistrationActivity">
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/logo_blue_red"
            android:layout_width="124dp"
            android:layout_height="100dp"/>

        <LinearLayout
            android:id="@+id/auth_forms"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/AppTheme.TextAppearance.RegFormText"
                android:hint="@string/phone_number_hint"/>
            <EditText
                style="@style/AppTheme.TextAppearance.RegFormText"
                android:hint="@string/full_name_hint" />
            <EditText
                style="@style/AppTheme.TextAppearance.RegFormText"
                android:hint="@string/course" />
            <EditText
                style="@style/AppTheme.TextAppearance.RegFormText"
                android:hint="@string/group"/>
            <EditText
                style="@style/AppTheme.TextAppearance.RegFormText"
                android:hint="@string/e_mail" />
            <EditText
                style="@style/AppTheme.TextAppearance.RegFormText"
                android:hint="@string/password_hint" />
            <EditText
                style="@style/AppTheme.TextAppearance.RegFormText"
                android:hint="@string/reenter_password_hint" />
        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            android:onClick="onClickConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="96dp"
            android:layout_marginEnd="96dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#8D9245"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_forms" />
    </android.support.constraint.ConstraintLayout>


</ScrollView>